欢迎页面布局完成

--- a/react-admin/src/components/NavHeader/index.module.css
+++ b/react-admin/src/components/NavHeader/index.module.css
@@ -4,7 +4,7 @@
   align-items: center;
   height: 50px;
   padding: 0 20px;
-  background-color: var(--dark-bg-color);
+  background-color: #fff;
   color: var(--dark-color);
 }
 .left {
