--- a/react-admin/src/layout/index.module.less
+++ b/react-admin/src/layout/index.module.less
@@ -1,9 +1,10 @@
 .content {
-  background-color: var(--dark-home-bg-color);
+  background-color: #f0f2f5;
   //   height: calc(100vh - 90px);
   padding: 20px;
   overflow: auto;
 }
 .wrapper {
   min-height: calc(100vh - 210px);
+  // width: calc(100% - 100px);
 }
