--- a/react-admin/src/views/dashboard/index.module.css
+++ b/react-admin/src/views/dashboard/index.module.css
@@ -48,3 +48,10 @@
   text-align: center;
   font-size: 34px;
 }
+.chart {
+  margin-top: 50px;
+}
+.item-line {
+  width: 100%;
+  height: 400px;
+}
