--- a/react-admin/src/App.less
+++ b/react-admin/src/App.less
@@ -1,28 +1,31 @@
 body {
   overflow: hidden;
 }
+
 .search-form {
   background-color: white;
   padding: 20px;
   border-radius: 5px;
   color: #000;
 }
+
 .base-table {
   background-color: white;
   border-radius: 5px;
   color: #000;
+  .header-wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 5px 5px 0 0;
+    color: #000;
+    padding: 15px;
+    .action button {
+      margin-left: 15px;
+    }
+  }
 }
-.base-table .header-wrapper {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  border-radius: 5px 5px 0 0;
-  color: #000;
-  padding: 15px;
-}
-.base-table .header-wrapper .action button {
-  margin-left: 15px;
-}
+
 .search-form + .base-table {
   margin-top: 20px;
 }
